[gd_scene load_steps=12 format=2]

[ext_resource path="res://volcano-clipart-md.png" type="Texture" id=1]
[ext_resource path="res://GambleMouseGame.gd" type="Script" id=2]
[ext_resource path="res://activeVolcano.png" type="Texture" id=3]
[ext_resource path="res://monster.png" type="Texture" id=4]
[ext_resource path="res://mouse.png" type="Texture" id=5]
[ext_resource path="res://win_img.png" type="Texture" id=6]
[ext_resource path="res://lose_img.png" type="Texture" id=7]
[ext_resource path="res://mixkit-retro-arcade-lose-2027.ogg" type="AudioStream" id=8]
[ext_resource path="res://mixkit-video-game-win-2016.ogg" type="AudioStream" id=9]
[ext_resource path="res://mixkit-chewing-something-crunchy-2244.ogg" type="AudioStream" id=10]
[ext_resource path="res://mixkit-volcano-lava-hiss-2447.ogg" type="AudioStream" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 150, 150 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 900.0
margin_top = 10.0
margin_right = 960.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "Trial #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 725.0
margin_top = 300.0
margin_right = 845.0
margin_bottom = 330.0
rect_scale = Vector2( 2, 2 )
text = "Total Number of Cookies ="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 311.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "Check Gamblemouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 290.0
margin_top = 80.0
margin_right = 450.0
margin_bottom = 160.0
rect_scale = Vector2( 2, 2 )
text = "You have received 30 cookies to start the game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 240.0
margin_right = 174.0
margin_bottom = 264.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 142.836, 113.137 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 750, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( 750, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
visible = false
margin_left = 715.0
margin_top = 225.0
margin_right = 755.0
margin_bottom = 245.0
rect_scale = Vector2( 2, 2 )
text = "4:1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="."]
visible = false
position = Vector2( 750, 140 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="Sprite6" type="Sprite" parent="."]
visible = false
position = Vector2( 750, 150 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="WINPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="LOSEPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MONSTERPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="VOLCANOPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
modulate = Color( 0, 1, 0.670588, 1 )
margin_left = 860.0
margin_top = 330.0
margin_right = 925.0
margin_bottom = 345.0
rect_scale = Vector2( 2.5, 3 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0.87451, 1, 0, 1 )
margin_left = 300.0
margin_top = 190.51
margin_right = 420.0
margin_bottom = 205.51
rect_scale = Vector2( 2.5, 3 )
text = "cookies"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
